sort.basic.insertion.AlgInsertionSort.scala.error
Erreur de compilation :
AlgInsertionSort:7: error: not found: value vtemp
    while(getValeur(pTemp)>vtemp && pTemp>0){copie(pTemp,pTemp+1);pTemp-=1}
                           ^